Trying to fix the layout shift for hero-video-section video-container

--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -27,7 +27,8 @@ body:has(main > div.section.hero-video-section) {
    padding: 0;
    position: relative;
    margin-top: -104px;
-   height: auto;
+   height: 112vh;
+   min-height: 600px;
    z-index: -2;
    max-width: unset;
    width: unset;
